@@ -15,6 +15,7 @@ TODO: maybe implement env variable to give hosts precedence
           (patch by Maxime Soulé).
 	- force a toplevel domain name in t/81_hosts.t (analyzed by
           David Jack Wange Olrik).
+        - document that AnyEvent::Log uses AnyEvent::IO.
 
 7.05 Wed Aug 21 10:38:08 CEST 2013
 	- uts46data.pl couldn't be found due to wrong naming of the file
